--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11027,19 +11027,16 @@ keys:
                 `isis`, `user`, `dynamic`.'
             include_leaked:
               type: bool
-            ospf_match_internal:
-              type: bool
-              description: OSPF routes learned from internal sources.
-            ospf_match_external:
-              type: bool
-              description: OSPF routes learned from external sources.
-            ospf_match_nssa_external:
+            ospf_route_type:
               type: str
-              description: OSPF routes learned from external NSSA sources.
               valid_values:
+              - external
+              - internal
               - nssa-external
               - nssa-external 1
               - nssa-external 2
+              description: The `ospf_route_type` is required with source_protocols
+                'ospf' and 'ospfv3'.
       vlan_aware_bundles:
         type: list
         primary_key: name
@@ -11683,19 +11680,16 @@ keys:
 
                     Only applicable if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
-                ospf_match_internal:
-                  type: bool
-                  description: OSPF routes learned from internal sources.
-                ospf_match_external:
-                  type: bool
-                  description: OSPF routes learned from external sources.
-                ospf_match_nssa_external:
+                ospf_route_type:
                   type: str
-                  description: OSPF routes learned from external NSSA sources.
                   valid_values:
+                  - external
+                  - internal
                   - nssa-external
                   - nssa-external 1
                   - nssa-external 2
+                  description: The `ospf_route_type` is required with source_protocols
+                    'ospf' and 'ospfv3'.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11762,19 +11756,16 @@ keys:
                     precedence.
 
                     Only applicable if `source_protocol` is `isis`.'
-                ospf_match_internal:
-                  type: bool
-                  description: OSPF routes learned from internal sources.
-                ospf_match_external:
-                  type: bool
-                  description: OSPF routes learned from external sources.
-                ospf_match_nssa_external:
+                ospf_route_type:
                   type: str
-                  description: OSPF routes learned from external NSSA sources.
                   valid_values:
+                  - external
+                  - internal
                   - nssa-external
                   - nssa-external 1
                   - nssa-external 2
+                  description: The `ospf_route_type` is required with source_protocols
+                    'ospf' and 'ospfv3'.
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -11923,19 +11914,16 @@ keys:
 
                     Only used if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
-                ospf_match_internal:
-                  type: bool
-                  description: OSPF routes learned from internal sources.
-                ospf_match_external:
-                  type: bool
-                  description: OSPF routes learned from external sources.
-                ospf_match_nssa_external:
+                ospf_route_type:
                   type: str
-                  description: OSPF routes learned from external NSSA sources.
                   valid_values:
+                  - external
+                  - internal
                   - nssa-external
                   - nssa-external 1
                   - nssa-external 2
+                  description: The `ospf_route_type` is required with source_protocols
+                    'ospfv3'.
       address_family_ipv6_multicast:
         type: dict
         keys:
@@ -12038,19 +12026,16 @@ keys:
                     precedence.
 
                     Only applicable if `source_protocol` is `isis`.'
-                ospf_match_internal:
-                  type: bool
-                  description: OSPF routes learned from internal sources.
-                ospf_match_external:
-                  type: bool
-                  description: OSPF routes learned from external sources.
-                ospf_match_nssa_external:
+                ospf_route_type:
                   type: str
-                  description: OSPF routes learned from external NSSA sources.
                   valid_values:
+                  - external
+                  - internal
                   - nssa-external
                   - nssa-external 1
                   - nssa-external 2
+                  description: The `ospf_route_type` is required with source_protocols
+                    'ospf' and 'ospfv3'.
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -12956,19 +12941,16 @@ keys:
 
                       Only applicable if `source_protocol` is one of `connected`,
                       `dynamic`, `isis`, `static` and `user`.'
-                  ospf_match_internal:
-                    type: bool
-                    description: OSPF routes learned from internal sources.
-                  ospf_match_external:
-                    type: bool
-                    description: OSPF routes learned from external sources.
-                  ospf_match_nssa_external:
+                  ospf_route_type:
                     type: str
-                    description: OSPF routes learned from external NSSA sources.
                     valid_values:
+                    - external
+                    - internal
                     - nssa-external
                     - nssa-external 1
                     - nssa-external 2
+                    description: The `ospf_route_type` is required with source_protocols
+                      'ospf' and 'ospfv3'.
             aggregate_addresses:
               type: list
               primary_key: prefix
@@ -13144,19 +13126,16 @@ keys:
 
                           Only applicable if `source_protocol` is one of `connected`,
                           `dynamic`, `isis`, `static` and `user`.'
-                      ospf_match_internal:
-                        type: bool
-                        description: OSPF routes learned from internal sources.
-                      ospf_match_external:
-                        type: bool
-                        description: OSPF routes learned from external sources.
-                      ospf_match_nssa_external:
+                      ospf_route_type:
                         type: str
-                        description: OSPF routes learned from external NSSA sources.
                         valid_values:
+                        - external
+                        - internal
                         - nssa-external
                         - nssa-external 1
                         - nssa-external 2
+                        description: The `ospf_route_type` is required with source_protocols
+                          'ospf' and 'ospfv3'.
             address_family_ipv6:
               type: dict
               keys:
@@ -13293,19 +13272,16 @@ keys:
 
                           Only applicable if `source_protocol` is one of `connected`,
                           `dynamic`, `isis`, `static` and `user`.'
-                      ospf_match_internal:
-                        type: bool
-                        description: OSPF routes learned from internal sources.
-                      ospf_match_external:
-                        type: bool
-                        description: OSPF routes learned from external sources.
-                      ospf_match_nssa_external:
+                      ospf_route_type:
                         type: str
-                        description: OSPF routes learned from external NSSA sources.
                         valid_values:
+                        - external
+                        - internal
                         - nssa-external
                         - nssa-external 1
                         - nssa-external 2
+                        description: The `ospf_route_type` is required with source_protocols
+                          'ospfv3'.
             address_family_ipv4_multicast:
               type: dict
               keys:
@@ -13396,19 +13372,16 @@ keys:
                           takes precedence.
 
                           Only applicable if `source_protocol` is `isis`.'
-                      ospf_match_internal:
-                        type: bool
-                        description: OSPF routes learned from internal sources.
-                      ospf_match_external:
-                        type: bool
-                        description: OSPF routes learned from external sources.
-                      ospf_match_nssa_external:
+                      ospf_route_type:
                         type: str
-                        description: OSPF routes learned from external NSSA sources.
                         valid_values:
+                        - external
+                        - internal
                         - nssa-external
                         - nssa-external 1
                         - nssa-external 2
+                        description: The `ospf_route_type` is required with source_protocols
+                          'ospf' and 'ospfv3'.
             address_family_ipv6_multicast:
               type: dict
               keys:
@@ -13498,19 +13471,16 @@ keys:
                           takes precedence.
 
                           Only applicable if `source_protocol` is `isis`.'
-                      ospf_match_internal:
-                        type: bool
-                        description: OSPF routes learned from internal sources.
-                      ospf_match_external:
-                        type: bool
-                        description: OSPF routes learned from external sources.
-                      ospf_match_nssa_external:
+                      ospf_route_type:
                         type: str
-                        description: OSPF routes learned from external NSSA sources.
                         valid_values:
+                        - external
+                        - internal
                         - nssa-external
                         - nssa-external 1
                         - nssa-external 2
+                        description: The `ospf_route_type` is required with source_protocols
+                          'ospf' and 'ospfv3'.
             address_family_flow_spec_ipv4:
               type: dict
               keys:
