--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,9 @@ site_name: Arista AVD
 site_author: Arista Ansible Team
 site_description: Arista Validated Designs documentation
 copyright: Copyright &copy; 2019 - 2023 Arista Networks
+strict: true
+exclude_docs: |
+  /README.md
 
 # Repository information
 repo_name: AVD on Github
