--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -709,7 +709,9 @@ keys:
                 - "nssa-external"
                 - "nssa-external 1"
                 - "nssa-external 2"
-              description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+              description: |
+                Routes learned by the OSPF protocol.
+                The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       vlan_aware_bundles:
         type: list
         primary_key: name
@@ -1350,7 +1352,9 @@ keys:
                     - "nssa-external"
                     - "nssa-external 1"
                     - "nssa-external 2"
-                  description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1430,7 +1434,9 @@ keys:
                     - "nssa-external"
                     - "nssa-external 1"
                     - "nssa-external 2"
-                  description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -1594,7 +1600,9 @@ keys:
                     - "nssa-external"
                     - "nssa-external 1"
                     - "nssa-external 2"
-                  description: The `ospf_route_type` is required with source_protocols 'ospfv3'.
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospfv3'.
       address_family_ipv6_multicast:
         type: dict
         keys:
@@ -1702,7 +1710,9 @@ keys:
                     - "nssa-external"
                     - "nssa-external 1"
                     - "nssa-external 2"
-                  description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -2581,7 +2591,9 @@ keys:
                       - "nssa-external"
                       - "nssa-external 1"
                       - "nssa-external 2"
-                    description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                    description: |
+                      Routes learned by the OSPF protocol.
+                      The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             aggregate_addresses:
               type: list
               primary_key: prefix
@@ -2761,7 +2773,9 @@ keys:
                           - "nssa-external"
                           - "nssa-external 1"
                           - "nssa-external 2"
-                        description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_ipv6:
               type: dict
               keys:
@@ -2902,7 +2916,9 @@ keys:
                           - "nssa-external"
                           - "nssa-external 1"
                           - "nssa-external 2"
-                        description: The `ospf_route_type` is required with source_protocols 'ospfv3'.
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospfv3'.
             address_family_ipv4_multicast:
               type: dict
               keys:
@@ -2998,7 +3014,9 @@ keys:
                           - "nssa-external"
                           - "nssa-external 1"
                           - "nssa-external 2"
-                        description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_ipv6_multicast:
               type: dict
               keys:
@@ -3093,7 +3111,9 @@ keys:
                           - "nssa-external"
                           - "nssa-external 1"
                           - "nssa-external 2"
-                        description: The `ospf_route_type` is required with source_protocols 'ospf' and 'ospfv3'.
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_flow_spec_ipv4:
               type: dict
               keys:
