--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7319,6 +7319,17 @@ $defs:
 
               '
             type: str
+          uplink_mtu:
+            documentation_options:
+              table: node-type-uplink-configuration
+            description: Point to Point uplinks MTU. This configuration will over-ride
+              `p2p_uplinks_mtu` configuration.
+            type: int
+            convert_types:
+            - str
+            min: 68
+            max: 65535
+            default: 9214
           max_uplink_switches:
             documentation_options:
               table: node-type-uplink-configuration
