--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -225,6 +225,16 @@ $defs:
               Set point-to-Point interface speed for the uplink switch interface only.
               Speed should be set in the format `<interface_speed>` or `forced <interface_speed>` or `auto <interface_speed>`.
             type: str
+          uplink_mtu:
+            documentation_options:
+              table: node-type-uplink-configuration
+            description: Point to Point uplinks MTU. This configuration will over-ride `p2p_uplinks_mtu` configuration.
+            type: int
+            convert_types:
+              - str
+            min: 68
+            max: 65535
+            default: 9214
           max_uplink_switches:
             documentation_options:
               table: node-type-uplink-configuration
