Fix: Add remoteUser to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,6 @@
     // The dev entrypoint is used to install Ansible collections and requirements, as they are not included with the dev version.
     // "true" is required to exit "postStartCommand" without entering ZSH.
     // the script must be executed ONLY if Ansible is not installed
-    "postStartCommand": "/bin/entrypoint.sh true"
+    "postStartCommand": "/bin/entrypoint.sh true",
+    "remoteUser": "avd"
 }
