Minor change in schemas.

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -228,13 +228,12 @@ $defs:
           uplink_mtu:
             documentation_options:
               table: node-type-uplink-configuration
-            description: Point-to-Point uplinks MTU in bytes. This configuration over-rides `p2p_uplinks_mtu` configuration.
+            description: Point-to-Point uplinks MTU in bytes. This setting overrides `p2p_uplinks_mtu` setting.
             type: int
             convert_types:
               - str
             min: 68
             max: 65535
-            default: 9214
           max_uplink_switches:
             documentation_options:
               table: node-type-uplink-configuration
