--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-wan1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-wan1.yml
@@ -69,7 +69,8 @@ router_bgp:
     update_source: Dps1
     route_reflector_client: true
     send_community: all
-    route_map_in: RM-WAN-HA-LOCAL-PREF-IN
+    route_map_in: RM-WAN-HA-PEER-IN
+    route_map_out: RM-WAN-HA-PEER-OUT
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -248,7 +249,7 @@ route_maps:
     type: permit
     description: Advertise local routes towards LAN
     match:
-    - extcommunity ECL-EVPN-SOO
+    - route-type local
   - sequence: 30
     type: permit
     description: Advertise routes received from WAN iBGP towards LAN
@@ -279,22 +280,29 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    match:
-    - extcommunity ECL-EVPN-SOO
-- name: RM-WAN-HA-LOCAL-PREF-IN
+    set:
+    - extcommunity soo 10.255.2.1:100 additive
+- name: RM-WAN-HA-PEER-IN
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Make EVPN routes originated from WAN HA peer less preferred and tag them
+    description: Set tag 50 on routes received from HA peer over EVPN
     set:
-    - local-preference 75
     - tag 50
-  - sequence: 20
+- name: RM-WAN-HA-PEER-OUT
+  sequence_numbers:
+  - sequence: 10
     type: permit
-    description: Make EVPN routes received by WAN HA peer less preferred and tag them
+    description: Make EVPN routes received from WAN less preferred when sending them to peer.
+    match:
+    - route-type internal
     set:
     - local-preference 50
-    - tag 50
+  - sequence: 20
+    type: permit
+    description: Make locally injected routes less preferred when sending them to peer over EVPN.
+    set:
+    - local-preference 75
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
