--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12726,6 +12726,12 @@ keys:
               description: VRF name.
               convert_types:
               - int
+            bgp:
+              type: dict
+              keys:
+                redistribute_internal:
+                  type: bool
+                  description: Redistribute internal BGP routes.
             rd:
               type: str
               description: Route distinguisher.
@@ -13231,6 +13237,9 @@ keys:
                               - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Redistribute internal BGP routes.
                 neighbors:
                   type: list
                   primary_key: ip_address
@@ -13393,6 +13402,9 @@ keys:
                               - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Redistribute internal BGP routes.
                 neighbors:
                   type: list
                   primary_key: ip_address
